# AIDA

./: AIDA.pro  CMakeLists.txt  README.md  camera.cpp  camera.h  imageresources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
